more home controller changes

--- a/app/components/home/homeView.html
+++ b/app/components/home/homeView.html
@@ -3,6 +3,9 @@
 <div class="address-container">
   <h2>{{ address }}</h2>
   <p>{{ weatherData.currentTemperature }}</p>
+  <p>{{ weatherData.weatherStatus }}</p>
+  <p>{{ weatherData.weatherIcon }}</p>
+  <p>{{ weatherData.humidity }}</p>
 </div>
 
 <weather-forecast-view></weather-forecast-view>
