--- a/assets/sass/modules/_detail.scss
+++ b/assets/sass/modules/_detail.scss
@@ -8,6 +8,14 @@
   }
 
   .main-content {
-
+		.weather-extra-data-container {
+			.wind-bearing {
+				.compass-icon {
+					width: 50px;
+					height: auto;
+					transition: all 0.5s ease-in-out;
+				}
+			}
+		}
   }
 }
