--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -1,4 +1,5 @@
 // Import libraries
+@import 'base/reset';
 @import '../libs/bootstrap/bootstrap';
 
 // Import base
@@ -6,5 +7,6 @@
 @import 'base/base';
 
 // Import modules
-@import 'modules/weather';
 @import 'modules/detail';
+@import 'modules/settings';
+@import 'modules/themes';
