--- a/app/components/weatherForecast/weatherForecastView.html
+++ b/app/components/weatherForecast/weatherForecastView.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="day in dailyWeather" ng-click="redirectToDaily(day.time)">
-    {{day.time}}
+  <li ng-repeat="day in dailyData">
+    {{ day.icon }}
   </li>
 </ul>
