--- a/assets/sass/modules/_detail.scss
+++ b/assets/sass/modules/_detail.scss
@@ -2,9 +2,10 @@
   .header {
     margin-bottom: $gutter-margin;
 
-    .current-address {
-      text-align: center;
-    }
+    .current-address,
+		.current-date {
+			text-align: center;
+		}
   }
 
   .main-content {
@@ -13,7 +14,8 @@
 				.compass-icon {
 					width: 50px;
 					height: auto;
-					transition: all 0.5s ease-in-out;
+					transform: rotate(45deg);
+					transition: all 3s ease-in-out;
 				}
 			}
 		}
