--- a/app/components/detail/detailView.html
+++ b/app/components/detail/detailView.html
@@ -1,5 +1,3 @@
-<search-bar></search-bar>
-
 <div class="detail-container">
   <div class="header">
     <div class="row">
@@ -7,12 +5,18 @@
         <a ui-sref="home">Back</a>
       </div>
 
-      <div class="current-address col-sm-8">
-        <h1>{{ address }}</h1>
-      </div>
+      <div class="col-sm-8">
+        <div class="row">
+          <div class="current-address">
+            <h1>{{ address }}</h1>
+          </div>
+        </div>
 
-      <div class="col-sm-2">
-        <a ui-sref="settings">Settings</a>
+        <div class="row">
+          <div class="current-date">
+            <h2>{{ currentDate | date:'fullDate' }}</h2>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -27,13 +31,13 @@
         <div class="weather-temperature col-sm-8">
           <div class="row">
             <div class="temperature col-sm-12" ng-show"temperature">
-              <p>Temperature: {{ temperature }}°</p>
+              <p>{{ temperature }}°</p>
             </div>
           </div>
 
           <div class="row">
-            <div class="apparent-temperature col-sm-12" ng-show="apparentTemp">
-              <p>Feels like: {{ apparentTemp }}°</p>
+            <div class="apparent-temperature col-sm-12" ng-show="apparentTemperature">
+              <p>Feels like: {{ apparentTemperature }}°</p>
             </div>
           </div>
 
