--- a/app/components/home/homeView.html
+++ b/app/components/home/homeView.html
@@ -2,10 +2,12 @@
 
 <div class="address-container">
   <h2>{{ address }}</h2>
-  <p>{{ weatherData.currentTemperature }}</p>
-  <p>{{ weatherData.weatherStatus }}</p>
-  <p>{{ weatherData.weatherIcon }}</p>
-  <p>{{ weatherData.humidity }}</p>
+  <p>{{ weatherToday.currentTemperature }}</p>
+  <p>{{ weatherToday.weatherStatus }}</p>
+  <p>{{ weatherToday.weatherIcon }}</p>
+  <p>{{ weatherToday.humidity }}</p>
+  <p>{{ weatherToday.windDirection }}</p>
+  <p>{{ weatherToday.windSpeed }}</p>
 </div>
 
 <weather-forecast-view></weather-forecast-view>
