wip search history

--- a/app/components/settings/settingsView.html
+++ b/app/components/settings/settingsView.html
@@ -50,9 +50,7 @@
 		<div class="row">
 			<h3>Recently searched locations</h3>
 			<div class="locations-history">
-				<ul>
-					<li>Breda, Netherlands</li>
-				</ul>
+				{{history}}
 			</div>
 		</div>
 	</div>
