can now back and reload the last location

--- a/app/components/detail/detailView.html
+++ b/app/components/detail/detailView.html
@@ -2,7 +2,7 @@
   <div class="header">
     <div class="row">
       <div class="col-sm-2">
-        <a ui-sref="home">Back</a>
+        <a ng-click="goHome()">Back</a>
       </div>
 
       <div class="col-sm-8">
